--- a/public/index.html
+++ b/public/index.html
@@ -511,7 +511,7 @@
 </pre></td><td class='code'><pre><code class='py'><span class='line'><span class="c">#!/usr/bin/env python</span>
 </span><span class='line'><span class="c"># -*- coding: utf-8 -*-</span>
 </span><span class='line'>
-</span><span class='line'><span class="c"># Batch rename utility. &lt;http://code.google.com/p/princess-alist/&gt;</span>
+</span><span class='line'><span class="c"># Batch rename utility. &lt;https://github.com/xiaogaozi/princess-alist&gt;</span>
 </span><span class='line'><span class="c"># Copyright (C) &lt;2011&gt;  xiaogaozi &lt;gaochangjian@gmail.com&gt;</span>
 </span><span class='line'><span class="c"># </span>
 </span><span class='line'><span class="c"># This program is free software: you can redistribute it and/or modify</span>
